# playing-around-SFML

./: CMakeLists.txt  README.md  main.cpp
application/: level.h  level1.cpp  level1.h  spell-book.cpp  spell-book.h  sprite-library.cpp  sprite-library.h  tile_map.cpp  tile_map.h
domain/: colisionableEntity.cpp  colisionableEntity.h  command.h  direction.h  drawable-entity.cpp  drawable-entity.h  fireball.cpp  fireball.h  player.cpp  player.h  position.cpp  position.h  renderer.h
domain/move/: moveLeft.cpp  moveLeft.h
infra/: SFMLRenderer.cpp  SFMLRenderer.h
world/: colisionHandler.cpp  colisionHandler.h  projectiles.cpp  projectiles.h
